--- a/.gitignore
+++ b/.gitignore
@@ -1,53 +1,64 @@
-# OS
-.DS_Store
-Thumbs.db
-desktop.ini
-*~
+# Python
+__pycache__/
+*.py[cod]
+*$py.class
+*.so
+.Python
+env/
+venv/
+ENV/
+build/
+develop-eggs/
+dist/
+downloads/
+eggs/
+.eggs/
+lib/
+lib64/
+parts/
+sdist/
+var/
+wheels/
+*.egg-info/
+.installed.cfg
+*.egg
 
-# IDE
+# Virtual Environment
+venv/
+ENV/
+env/
+
+# IDEs
 .vscode/
 .idea/
 *.swp
 *.swo
-*.sublime-project
-*.sublime-workspace
+*~
+.DS_Store
 
-# Node
-node_modules/
-npm-debug.log
-yarn-error.log
-package-lock.json
-yarn.lock
+# Streamlit
+.streamlit/secrets.toml
+.streamlit/config_local.toml
 
 # Logs
 *.log
-logs/
 
-# Environment
-.env
-.env.local
-.env.*.local
-
-# Build
-dist/
-build/
-.tmp/
-
-# Testing
-coverage/
-.nyc_output/
-
-# Clasp
-.clasp.json
-# Note: .clasp.json contains scriptId - keep it local for security
-
-# Apps Script
-# These are managed in Apps Script editor
-# appsscript.json is tracked for config reference
-
-# Temp files
-temp/
-tmp/
+# Temporary files
+*.tmp
 *.bak
-*.backup
+*.swp
+*~
 
+# OS
+.DS_Store
+Thumbs.db
+
+# Data
+*.csv~
+*.xlsx~
+
+# Duplicate files
+*(1).csv
+*(2).csv
+*_Advanced.csv
+*_Extra.csv
